# IODR-Assigment

./: README.md  pyproject.toml
src/iodr/: db.py  main.py  schema.py
ui/: package.json  pnpm-lock.yaml
ui/src/: App.tsx  schema.ts
ui/src/components/: Dashboard.tsx
